Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.2, Qt Creator 13.0.0-beta1
-
None
-
Windows 10
Qt Creator 13 beta1-56,
Qt Creator 12.0.2,
Desktop Qt 6.6.0 MSVC2019 64bit
-
-
832fde9e0 (13.0)
Description
Qt 6 search results include result from Cmake modules used in the project
STEPS:
- Open an Qt 6 example in Qt Creator (say calqlatr example)
- Open search window (Ctrl+Shift+F)
- Search for some keyword (say 'window' which is common)
- Observe the search results
OBSERVED :
- Search results include results from files in cmake modules included
For eg D:\Qt\5.x.x\6.6.0\msvc2019_64\lib\cmake\Qt6Gui\Qt6QWindowsDirect2DIntegrationPluginAdditionalTargetInfo.cmake
EXPECTED:
- As a developer, I would be interested in search results only from the code of the project"
Attachments
For Gerrit Dashboard: QTCREATORBUG-30372 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
540370,2 | CMake: Exclude non-project CMake files from search | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |