CMake: Exclude non-project CMake files from search

All the CMake files the belong to packages found with `find_package` are
part of the project tree, but we shouldn't include them when searching
through "files in the project".

Set listInProjects to false for these files.

Fixes: QTCREATORBUG-30372
Change-Id: If39d477f14dc3207f4e2dd66b2f3969811dbd863
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>